checking if height is fixed for business card on mobile

--- a/src/css/mainPage/businessCard.css
+++ b/src/css/mainPage/businessCard.css
@@ -220,6 +220,10 @@
         animation: fadeInOnMobile 2s;
     }
 
+    .myInfoCard{
+        height: 950px !important;
+    }
+
     @keyframes fadeInOnMobile {
         from {
             opacity: 0;
